--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ grpcio==1.69.0
 h11==0.14.0
 h5py==3.12.1
 idna==3.10
+ipykernel==6.30.1
 itsdangerous==2.2.0
 Jinja2==3.1.5
 keras==3.7.0
@@ -23,6 +24,7 @@ libclang==18.1.1
 Markdown==3.7
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.9.3
 mdurl==0.1.2
 ml-dtypes==0.4.1
 namex==0.0.8
@@ -38,6 +40,8 @@ Pygments==2.19.1
 python-multipart==0.0.20
 requests==2.32.3
 rich==13.9.4
+scikit-learn==1.5.2
+seaborn==0.13.2
 six==1.17.0
 sniffio==1.3.1
 starlette==0.41.3
