--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ click==8.1.8
 colorama==0.4.6
 fastapi==0.115.6
 Flask==3.1.0
+flask-cors==4.0.0
 flatbuffers==24.12.23
 gast==0.6.0
 google-pasta==0.2.0
@@ -32,6 +33,7 @@ numpy==2.0.2
 opt_einsum==3.4.0
 optree==0.13.1
 packaging==24.2
+pandas==2.3.3
 pillow==11.1.0
 protobuf==5.29.2
 pydantic==2.10.4
